...
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input"
                app:layout_constraintBottom_toTopOf="@id/reset_password_link_text_view"
                android:layout_marginTop="8dp"
                app:loadingButtonText="@string/login_button_text"/>

            <TextView
                android:id="@+id/reset_password_link_text_view"
                android:layout_width="0dp"
...
