...
                app:layout_constraintTop_toTopOf="parent"
                android:adjustViewBounds="true"
                tools:src="@drawable/logo"
                android:contentDescription="@string/meaning_image_content_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/meanings_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/meaning_image"
                app:layout_constraintBottom_toTopOf="@id/favorite_word_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
