...
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/profile"
            android:contentDescription="@string/account_picture_content_description" />

        <TextView
            android:id="@+id/account_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
